add new ideas to README

--- a/README.org
+++ b/README.org
@@ -51,6 +51,9 @@
     - [ ] Watching
   - [ ] Click-to-run
 - [ ] Screen share indicator
+- [ ] KDE Connect
+- [ ] Power menu
+  - [ ] Uptime
 
 ** Features
 - [X] Wayland support
